# llmsmith-sprints

./: LOG.md  README.md  pyproject.toml
sprintA_llm_foundations/: README.md  main.py  pyproject.toml
sprintA_llm_foundations/src/: llm_api_client.py  main.py  util.py
sprintA_llm_foundations/src/groq_client/: __init__.py  client.py  config.py  exceptions.py  util.py
sprintA_llm_foundations/tests/: test_client.py  test_llm_api_client.py  test_util.py
sprintB_ai_devtools/: README.md
