[project]
name = "groq-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests", "python-dotenv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groq_client"]

[tool.black]
target-version = ["py311", "py312", "py313", "py314",]